[CoordnatedGraphics] A child layer of a semitransparent layer isn't clipped properly https://bugs.webkit.org/show_bug.cgi?id=181080

Reviewed by Žan Doberšek.

Check whether the applied clipping area is empty before drawing the children of a TextureMapperLayer. If
the area is empty no children will be drawn, so we can avoid drawing them.

No new tests -- no change in behavior.

* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::paintSelfAndChildren):


Canonical link: https://commits.webkit.org/198038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227729 268f45cc-cd09-0410-ab3c-d52691b4dbfc